# dripdrop

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  infisical.json  pyproject.toml  renovate.json
.github/workflows/: client.yml  server.yml
app/: __init__.py  app.py  dependencies.py  models.py  scheduler.py  settings.py  utils.py  worker.py
app/admin/: app.py
app/admin/tests/: test_run_cron.py
app/authentication/: app.py  models.py  responses.py
app/authentication/tests/: test_base.py  test_create.py  test_logout.py  test_reset.py
app/base/: dependencies.py  models.py  test.py
app/clients/: audiotags.py
app/db/: __init__.py  alembic.ini
app/db/migrations/: env.py
app/db/models/: __init__.py  music.py  user.py  youtube.py
app/models/: __init__.py  authentication.py  music.py  webdav.py  youtube.py
app/music/: jobs.py  models.py  tasks.py  utils.py
app/music/tests/: test_base.py  (+4 more)
app/services/: audiotags.py  database.py  google.py  google_api.py  httpclient.py  image_downloader.py  imagedownloader.py  invidious.py  jwt.py  redis_client.py  rq_client.py  s3.py  sendgrid_client.py  websocket_channel.py
app/tasks/: app.py  email.py  music.py  youtube.py
app/templates/: __init__.py
app/utils/: database.py
app/youtube/: models.py  tasks.py  video.py
client/: Dockerfile  openapi-config.js  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.css  main.tsx  openapi-config.js  store.ts
migrations/: env.py
tests/: conftest.py
tests/tasks/: test_email.py  test_music.py  test_youtube.py
(+113 files in other folders)
